searchbutton contrast fixed on lighter themes

--- a/src/components/searchButton/SearchButton.css
+++ b/src/components/searchButton/SearchButton.css
@@ -18,7 +18,8 @@
   color: #fff;
 }
 .input-search::placeholder {
-  color: rgba(255, 255, 255, 0.5);
+  @apply text-base-content;
+  /* color: rgba(255, 255, 255, 0.5); */
   font-size: 18px;
   letter-spacing: 2px;
   font-weight: 100;
@@ -41,6 +42,7 @@
   align-items: center;
 }
 .btn-search:focus ~ .input-search {
+  @apply text-base-content;
   width: 300px;
   border-radius: 0px;
   background-color: transparent;
@@ -48,6 +50,8 @@
   transition: all 500ms cubic-bezier(0, 0.11, 0.35, 2);
 }
 .input-search:focus {
+  @apply text-base-content;
+
   width: 300px;
   border-radius: 0px;
   background-color: transparent;
